[workspace]

resolver = "2"

members = [
    "api",
    "common"
    
]

[workspace.dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.21"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }
lazy_static = "1.4.0"
serde_json = "1.0.116"
redis = { version = "0.25.3", features = ["tokio-comp"] }
anyhow = "1.0.82"
jsonwebtoken = "9.2.0"
base64 = "0.22.0"
num-traits = "0.2.18"
num-derive = "0.4.2"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
uuid = "1.8.0"