[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
axum = { workspeace = true }
tower = { workspeace = true}
tower-http = { workspeace = true,features = ["trace"] }
tokio = { workspeace = true, features = ["full"] }
toml = { workspeace = true }
log = { workspeace = true }
tracing = { workspeace = true,features = [] }
tracing-subscriber = { workspeace = true }
serde = { workspeace = true, features = ["derive"] }
lazy_static = { workspeace = true }
sqlx = {workspeace = true, features = ["runtime-tokio-rustls", "postgres", "chrono"]}
redis = { workspeace = true,features = ["tokio-comp"]}
anyhow = { workspeace = true }
chrono = { workspeace = true ,features = ["serde"]}
num-derive =  { workspeace = true }
serde_json =  { workspeace = true }
hmac = { workspeace = true }
sha2 = { workspeace = true }
hex = { workspeace = true }
uuid = { workspeace = true ,features = ["v4"]}